[gd_scene load_steps=20 format=3 uid="uid://bwk5b6hf5n83w"]

[ext_resource type="Material" uid="uid://cjue77d8wy50f" path="res://Scenes/Enemy/flash.tres" id="1_3sgo4"]
[ext_resource type="Texture2D" uid="uid://bfuolea5te4sq" path="res://assets/tank/tankBody_darkLarge_outline.png" id="1_r5k5e"]
[ext_resource type="PackedScene" uid="uid://1meuk7k86qj1" path="res://Scenes/Component/mis_launch_component.tscn" id="2_414gk"]
[ext_resource type="Script" path="res://Scenes/Enemy/enemy_mis_vehicle.gd" id="2_m6vyx"]
[ext_resource type="PackedScene" uid="uid://d2wvhn6pfhm6w" path="res://Scenes/Component/hurt_box_component.tscn" id="3_ovpvo"]
[ext_resource type="PackedScene" uid="uid://8pwhobx1swnv" path="res://Scenes/Component/health_component.tscn" id="4_lnkgh"]
[ext_resource type="PackedScene" uid="uid://bcx2gtiv30m8d" path="res://Scenes/Component/trail_compoment.tscn" id="5_bwmf4"]
[ext_resource type="PackedScene" uid="uid://v5l1yekackxo" path="res://Scenes/Object/enemy_missile.tscn" id="5_yvg2m"]
[ext_resource type="PackedScene" uid="uid://cn38yaihoeao" path="res://Scenes/Component/detect_component.tscn" id="6_k68wf"]
[ext_resource type="PackedScene" uid="uid://cbmntb8xhks8d" path="res://Scenes/Enemy/FSM/state_machine.tscn" id="10_tpd2j"]
[ext_resource type="PackedScene" uid="uid://00cn34fpldft" path="res://Scenes/Enemy/FSM/enemy_patrol.tscn" id="11_n27fw"]
[ext_resource type="PackedScene" uid="uid://c8rl6pp8spydc" path="res://Scenes/Enemy/FSM/enemy_attack.tscn" id="12_5bg18"]
[ext_resource type="PackedScene" uid="uid://d1us2n6mdxj5e" path="res://Scenes/Enemy/FSM/enemy_wander.tscn" id="13_1oh2j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nuqpe"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_618sf"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_137ie"]
radius = 380.0

[sub_resource type="Animation" id="Animation_k4ekd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_luhix"]
resource_name = "flash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3edvn"]
_data = {
"RESET": SubResource("Animation_k4ekd"),
"flash": SubResource("Animation_luhix")
}

[node name="EnemyMisVehicle" type="CharacterBody2D" groups=["Enemy", "EnemyTank"]]
z_index = 1
material = ExtResource("1_3sgo4")
collision_layer = 64
collision_mask = 112
script = ExtResource("2_m6vyx")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 8.0
navigation_layers = 2
path_postprocessing = 1
avoidance_enabled = true
radius = 30.0
debug_enabled = true

[node name="Base" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("1_r5k5e")

[node name="MisLaunchComponent" parent="." instance=ExtResource("2_414gk")]
use_parent_material = true
cool_down = 2.0
missile_scene = ExtResource("5_yvg2m")

[node name="Sprite2D" parent="MisLaunchComponent" index="0"]
use_parent_material = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nuqpe")

[node name="HurtBoxComponent" parent="." instance=ExtResource("3_ovpvo")]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("CircleShape2D_618sf")

[node name="HealthComponent" parent="." instance=ExtResource("4_lnkgh")]

[node name="TrailCompoment" parent="." instance=ExtResource("5_bwmf4")]

[node name="DetectComponent" parent="." instance=ExtResource("6_k68wf")]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectComponent"]
shape = SubResource("CircleShape2D_137ie")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3edvn")
}

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("10_tpd2j")]
initial_state = NodePath("EnemyPatrol")

[node name="EnemyPatrol" parent="StateMachine" node_paths=PackedStringArray("enemy", "nav_agent", "search_component") instance=ExtResource("11_n27fw")]
enemy = NodePath("../..")
nav_agent = NodePath("../../NavigationAgent2D")
search_component = NodePath("../../DetectComponent")

[node name="EnemyAttack" parent="StateMachine" node_paths=PackedStringArray("enemy", "search_component", "weapon_component") instance=ExtResource("12_5bg18")]
enemy = NodePath("../..")
search_component = NodePath("../../DetectComponent")
weapon_component = NodePath("../../MisLaunchComponent")

[node name="EnemyWander" parent="StateMachine" node_paths=PackedStringArray("enemy", "search_component") instance=ExtResource("13_1oh2j")]
enemy = NodePath("../..")
search_component = NodePath("../../DetectComponent")

[editable path="MisLaunchComponent"]
